changes to size of graphic

--- a/index.html
+++ b/index.html
@@ -58,10 +58,6 @@ ul.nav li a{
 ul.nav li a:hover{
 	color:#272727;
 }
-/*ul.nav li a:visited{
-	color:#272727;
-}
-*/
 a.about{
 	color:#1EA9C4;
 }
@@ -92,6 +88,7 @@ p.about{
 }
 .schedule-graphic{
 	background:url(http://f.cl.ly/items/3k0B1T3j1X1t3R2m3O2f/noun_project_13376.svg);
+	height:50%;
 }
 .about-details{
 	left:100px;
