--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ p.about{
 }
 .schedule-graphic{
 	background:url(http://f.cl.ly/items/3k0B1T3j1X1t3R2m3O2f/noun_project_13376.svg);
+	height:50%;
 }
 .about-details{
 	left:100px;
