fixed title link

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ p.about{
 </head>
 <body>
 	<div id="nav-container">
-		<h1 class="title"><a href="https://dl.dropboxusercontent.com/u/24683141/spaces-of-hacking/index.html">The Spaces of Hacking</a></h1>
+		<h1 class="title"><a href="https://www.mayarichman.github.io/spaces-of-hacking/">The Spaces of Hacking</a></h1>
 		<ul class="nav">
 		   <li><a class="about" href="#about">About</a></li>
 		   <li><a class="schedule" href="#schedule">Schedule</a></li>
