updated broken map/header links

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ p.about{
 </head>
 <body>
 	<div id="nav-container">
-		<h1 class="title"><a href="https://dl.dropboxusercontent.com/u/24683141/spaces-of-hacking/index.html">The Spaces of Hacking</a></h1>
+		<h1 class="title"><a href="http://www.mayarichman.github.io/spaces-of-hacking">The Spaces of Hacking</a></h1>
 		<ul class="nav">
 		   <li><a class="about" href="#about">About</a></li>
 		   <li><a class="schedule" href="#schedule">Schedule</a></li>
@@ -122,7 +122,7 @@ p.about{
 <div id="page1">
   <a id="about"></a>
   <div class="about-details"><h2>Where is it?</h2>Notman House</br>
-<a href="https://tiles.mapbox.com/mayarichman/edit/map-35cl7xq5#16/45.5120/-73.5695">51 Sherbrooke Street West 
+<a href="http://a.tiles.mapbox.com/v3/mayarichman.map-35cl7xq5.html">51 Sherbrooke Street West 
 Montreal, QC H2X 1X2
 Canada</a></br><h2>When is it?</h2>Sunday, 13 October 2013 from 2:00 PM to 5:30 PM (EDT)</br><h2>Can I just show up?</h2>Register <a href="http://spacesofhacking.eventbrite.ca/">here</a>.</div>
   <div class="about-funded"><h2>Funding provided by:</h2></br> <a href="http://www.mcgill.ca/wolfechair/">The Wolfe Chair in Scientific and Technological Literacy</a> and <a href="http://media.mcgill.ca/"><img src="http://f.cl.ly/items/0S20331I1V0f1x0F0g0E/final_logos_alone_4colors.gif" height="75px" style="padding: 0 10px 0;"></a></div>
