changed name from Denisa to Sara

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ guide the conversation. </p>
 (Concordia)</br>
 - <a href="http://johansoderberg.net/">Johan Soderberg</a>, Precursors to Open Hardware inthe Czech Republic (Laboratoire territoire, techonologie et société (LATTS))</br>
 - <a href="http://www.mcgill.ca/tcpsych/faculty/suparnachoudhury">Suparna Choudhury</a>, Hacking the Brain (McGill University)</br>
-- <a href="http://nus.academia.edu/DenisaKera">Denisa Kera</a>, Mobile Labs for Open Science in the Global South (National University of Singapore)</p>
+- <a href="http://nus.academia.edu/DenisaKera">Sara Tocchetti</a>, Mobile Labs for Open Science in the Global South (National University of Singapore)</p>
 <p class="about">Commentator: xSmurf, Foulab<p>
 <p class="about"><h2>3:30-4:30pm</h2><h2>Panel Two: Unraveling and Raveling</h2></p>
 <p class="about">- <a href="gabriellacoleman.org/">Gabriella Coleman</a>, Trust in Anonymous (McGill University)</br>
